tutorial/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prenom-hello-world-service
  labels:
    app: prenom-hello-world-service
spec:
  type: ClusterIP
  ports:
  - name: hello-world
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: prenom-hello-world
